# apis-rust

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE  cargo-bazel-lock.json
crates/client/: BUILD.bazel  Cargo.toml
crates/client/src/: main.rs
crates/proto/hello_world/: .bazelignore  BUILD.bazel  hello_world.pb.go  hello_world.proto
crates/server/: BUILD.bazel  Cargo.toml
crates/server/src/: main.rs
