[workspace]
resolver = "2"
members = [
    "crates/client",
    #"crates/proto",
    "crates/server",
]

[workspace.package]
authors = ["Michael Gardner <mjgardner@abitofhelp.com>"]
description = "This is an example application using the latest versions of ..."
edition = "2021"
homepage = "https://www.abitofhelp.com"
keywords = ["rust", "bazel", "protobuf", "grpc"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/abitofhelp/apis-rust.git"
rust-version = "1.76"