module(
    name = "apis",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

bazel_dep(
    name = "grpc",
    version = "1.48.1",
    dev_dependency = True,
)

bazel_dep(
    name = "protobuf",
    version = "21.7",
    dev_dependency = True,
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "rules_go",
    version = "0.43.0",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_proto",
    version = "6.0.0-rc1",
    dev_dependency = True,
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.5")

# Register the Go SDK installed on the host.
go_sdk.host()

bazel_dep(
    name = "gazelle",
    version = "0.34.0",
    dev_dependency = True,
)  #, repo_name = "bazel_gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    #"com_github_grpc_ecosystem_grpc_gateway_v2",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_zap",
)
